# Multimodal_LLM-Phishing-Detection

./: .dockerignore  .gitignore  Dockerfile  FINAL_REPORT.md  FINAL_STATUS.md  LICENSE  PRESENTATION.md  README.md  TODAY_SUMMARY.md  Untitled.ipynb  abstract.txt  credentials.json.template  demo_security.py  detect.py  detect_enhanced.py  docker-compose.yml  email_scanner.py  exam.eml  gui.py  imap_scanner.py  project_summary.md  requirements.txt  scan_email.py  send_ai_test.py  send_detailed_test.py  setup_wizard.py  test_comprehensive.py  test_project.sh  test_security.py  trigger_alert.py
02_models/: classifier.py  feature_columns.joblib  feature_scaler.joblib  model_metrics.json  phishing_classifier.joblib
03_training/: dataset.py  model_manager.py  train_classifier.py  train_ml.py  train_with_mlflow.py
04_inference/: api.py  api_docs.py  auth.py  bentoml_service.py  schemas.py  service.py  test_security.py
05_utils/: common_words.py  connectivity.py  data_preparation.py  feature_extraction.py  mllm_transformer.py  secure_config.py  security_validator.py  text_feature_generator.py  tls_analyzer.py  typosquatting_detector.py  url_extractor.py  web_scraper.py
06_notebooks/: 02_data_preprocessing.ipynb  03_staged_data_processing.ipynb  data_collection.ipynb
07_configs/: config.yaml
09_documentation/: 00_Project_Overview.md  01_Data_Folder.md  02_Models_Folder.md  03_Training_Folder.md  04_Inference_Folder.md  05_Utils_Folder.md  06_Entry_Points.md  07_Docker_Deployment.md  08_GUI_Guide.md  10_gophish_testing.md  11_Thunderbird_Extension.md  12_User_Manual.md  13_Implementation_Guide.md
archive/: train.py  train_classifier.py
browser-extension/: README.md  background.js  content-script.js  content.js  manifest.json  popup.html  styles.css
docs/: COMPLETION_STATUS.md  FINAL_REPORT.md  PHASE3_4_PLAN.md  REFERENCE_DOCUMENT.md  project_summary.md
gui-tauri/: index.html  package.json  tsconfig.json
gui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui-tauri/src-tauri/src/: main.rs
scripts/: build_desktop_app.sh  setup_mlflow_tauri.sh
tests/: sample_phishing.eml  test_cases.txt
(+29 files in other folders)
