[package]
name = "phishing-guard"
version = "2.0.0"
description = "Phishing Guard Desktop - Standalone Phishing Detection"
authors = ["Akarsh <akarshbandi82@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
webkit2gtk = { version = "2.0", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
gtk = ["webkit2gtk"]
